Bug 1663859 - Move all IMAP URI creation onto the main thread. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D119658